--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -41,7 +41,7 @@
                         </li>
 
                     </ul>
-                    <div class="button-flex">
+                    <div class="button-row">
                         <a class="button" [routerLink]="[]" fragment="clendly">Get Started</a> <a class="button"
                             [routerLink]="[]" fragment="clendly">Schedual
                             Now</a>
