--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,39 +1,39 @@
 <main>
     <div class="maincontentbanner">
-    <div class="banner0mobileview">
-        <img src="./images/16.jpeg">
-    </div>
-    <section class="banner" style="background-image: url(./images/banner.jpeg);">
-        <div class="container">
-            <div class="bannerflex">
-                <div class="banner-content">
-                    <h5 class="tag-line white">WELCOME TO YOUR</h5>
-                    <h1>Journey to Emotional <br>Authenticity</h1>
-                    <p>Let me show you the way to stop your emotional
-                        misery.</p>
-                    <div class="button-row">
-                        <a class="button whitebt" routerLink="/courses">Explore courses</a>
-                        <a class="button whitebt" routerLink="/book-session">Book a session with Kenny</a>
-                    </div>
+        <div class="banner0mobileview">
+            <img src="./images/16.jpeg">
+        </div>
+        <section class="banner" style="background-image: url(./images/banner.jpeg);">
+            <div class="container">
+                <div class="bannerflex">
+                    <div class="banner-content">
+                        <h5 class="tag-line white">WELCOME TO YOUR</h5>
+                        <h1>Journey to Emotional <br>Authenticity</h1>
+                        <p>Let me show you the way to stop your emotional
+                            misery.</p>
+                        <div class="button-row">
+                            <a class="button whitebt" routerLink="/courses">Explore courses</a>
+                            <a class="button whitebt" routerLink="/book-session">Book a session with Kenny</a>
+                        </div>
 
 
-                    <p class="people">Trusted by 4,000+ people</p>
-                    <div class="logos-people">
-                        <img class="logos-people1" src="./images/people1.png" loading="lazy" alt="">
-                        <img class="logos-people2" src="./images/people2.png" loading="lazy" alt="">
-                        <img class="logos-people3" src="./images/people3.png" loading="lazy" alt="">
-                        <img class="logos-people4" src="./images/people4.png" loading="lazy" alt="">
-                        <img class="logos-people5" src="./images/people5.png" loading="lazy" alt="">
-                        <img class="logos-people6" src="./images/people6.png" loading="lazy" alt="">
-                        <img class="logos-people7" src="./images/people7.png" loading="lazy" alt="">
+                        <p class="people">Trusted by 4,000+ people</p>
+                        <div class="logos-people">
+                            <img class="logos-people1" src="./images/people1.png" loading="lazy" alt="">
+                            <img class="logos-people2" src="./images/people2.png" loading="lazy" alt="">
+                            <img class="logos-people3" src="./images/people3.png" loading="lazy" alt="">
+                            <img class="logos-people4" src="./images/people4.png" loading="lazy" alt="">
+                            <img class="logos-people5" src="./images/people5.png" loading="lazy" alt="">
+                            <img class="logos-people6" src="./images/people6.png" loading="lazy" alt="">
+                            <img class="logos-people7" src="./images/people7.png" loading="lazy" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <img src="./images/shep.svg" class="banner-shep" loading="lazy" alt="">
-    </section>
-</div>
+            <img src="./images/shep.svg" class="banner-shep" loading="lazy" alt="">
+        </section>
+    </div>
     <section id="top0" class="vertyvery" data-aos="fade-up" data-aos-duration="1500">
         <div class="container">
             <div class="vertyvery-box">
@@ -264,20 +264,14 @@
             </div>
         </div>
         <!-- Lightbox -->
-     <div class="lightbox-bg"> 
-  <div [class.active]="isLightboxOpen" class="lightbox">
-    <span class="close3" (click)="closeLightbox()">&times;</span>
-    <iframe
-      *ngIf="videoUrl"
-      title="YouTube video player"
-      [src]="videoUrl | safeUrl"
-      width="200"
-      height="188"
-      frameborder="0"
-      allowfullscreen>
-    </iframe>
-  </div>
-</div>
+        <div class="lightbox-bg">
+            <div [class.active]="isLightboxOpen" class="lightbox">
+                <span class="close3" (click)="closeLightbox()">&times;</span>
+                <iframe *ngIf="videoUrl" title="YouTube video player" [src]="videoUrl | safeUrl" width="200"
+                    height="188" frameborder="0" allowfullscreen>
+                </iframe>
+            </div>
+        </div>
 
 
     </section>
@@ -286,7 +280,9 @@
         <div class="container">
             <div class="wellness-header" data-aos="fade-up" data-aos-duration="100">
                 <h3>A Journey from Healing to Happiness</h3>
-                <p>Take the next step in your healing journey. With compassion and understanding, this space supports you in processing emotional pain, recovering from trauma, and gently moving toward a life filled with confidence, peace, and purpose.</p>
+                <p>Take the next step in your healing journey. With compassion and understanding, this space supports
+                    you in processing emotional pain, recovering from trauma, and gently moving toward a life filled
+                    with confidence, peace, and purpose.</p>
             </div>
             <app-emotionalswiper />
             <div class="progress-content">
@@ -457,78 +453,96 @@
 
 
     <!-- <app-exercises-workbook /> -->
-     <section class="paddings">
-            <div class="container">
-                <div class="works-sections">
-                    <div class="left">
-                        <h5 class="tag-line">How it works?</h5>
-                        <h3>Book Your 1-Hour Breakthrough Call</h3>
-                        <p>Kenny doesn’t offer quick fixes or surface-level advice. He believes real healing only happens when you go deep — to the root. Whether you're carrying childhood wounds, navigating toxic relationships, or dealing with the aftershocks of narcissistic abuse, Kenny helps you understand why you feel stuck — not just how to cope. Using his signature <b>"Worst Day Cycle"</b> method, he guides you to trace your pain back to its source, so you can finally break the patterns that keep repeating in your life.</p>
+    <section class="paddings">
+        <div class="container">
+            <div class="works-sections">
+                <div class="left">
+                    <h5 class="tag-line">How it works?</h5>
+                    <h3>Book Your 1-Hour Breakthrough Call</h3>
+                    <p>Kenny doesn’t offer quick fixes or surface-level advice. He believes real healing only happens
+                        when you go deep — to the root. Whether you're carrying childhood wounds, navigating toxic
+                        relationships, or dealing with the aftershocks of narcissistic abuse, Kenny helps you understand
+                        why you feel stuck — not just how to cope. Using his signature <b>"Worst Day Cycle"</b> method,
+                        he guides you to trace your pain back to its source, so you can finally break the patterns that
+                        keep repeating in your life.</p>
 
-
-                        <div class="kannyimgg">
-                            <img src="images/16.jpeg">
-                        </div>
-
-
-                        <div class="cta-box">
-                            <h3>Kenny Weiss: Truth & Healing Advocate</h3>
-                            <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
-                                from the past so they can once again love themselves. </p>
-                            <div class="button-row"> 
-                                 <a class="button" routerLink="/book-session">Let’s talk</a>
-                            </div>
-                            <div class="step"><small>All queries are replied within
-                                    <u>24hrs</u>.</small></div>
-                        </div>
-
+                    <div class="kannyimgg">
+                        <img src="images/16.jpeg">
                     </div>
 
-                    <div class="right">
-                        <div class="step-line"></div>
- 
+
+                    <div class="cta-box mobile-hide">
+                        <h3>Kenny Weiss: Truth & Healing Advocate</h3>
+                        <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
+                            from the past so they can once again love themselves. </p>
+                        <div class="button-row">
+                            <a class="button" routerLink="/book-session">Let’s talk</a>
+                        </div>
+                        <div class="step"><small>All queries are replied within
+                                <u>24hrs</u>.</small></div>
+                    </div>
+
+                </div>
+
+                <div class="right">
+                    <div class="step-line"></div>
+
                     <div class="step">
-                            <div class="step-number">1</div>
-                            <div class="step-content">
-                                <h4>Truly Heard — Without Judgment</h4>
-                                <p>This isn’t a surface-level chat. It’s a safe space where your feelings, pain, and
-                                    questions are met with understanding — not shame or dismissal.</p>
-                            </div>
+                        <div class="step-number">1</div>
+                        <div class="step-content">
+                            <h4>Truly Heard — Without Judgment</h4>
+                            <p>This isn’t a surface-level chat. It’s a safe space where your feelings, pain, and
+                                questions are met with understanding — not shame or dismissal.</p>
                         </div>
-
-                        <div class="step">
-                            <div class="step-number">2</div>
-                            <div class="step-content">
-                                <h4>Clarity on What’s Really Going On</h4>
-                                <p>Most people don't realize what's beneath their sadness, fatigue, or numbness. Kenny
-                                    helps you identify the real root — not just treat the symptoms.</p>
-                            </div>
-                        </div>
-
-                        <div class="step">
-                            <div class="step-number">3</div>
-                            <div class="step-content">
-                                <h4>Personalized Path Forward</h4>
-                                <p>No cookie-cutter advice here. Based on your unique situation, Kenny outlines clear
-                                    next steps so you know exactly what healing can look like — for you.</p>
-                            </div>
-                        </div>
-
-
-                        <div class="step">
-                            <div class="step-number">4</div>
-                            <div class="step-content">
-                                <h4>Leave With Hope (Maybe for the First Time in a While)</h4>
-                                <p>Even a single conversation can help you feel lighter, more seen, and less alone — and
-                                    that spark can change everything.</p>
-                            </div>
-                        </div> 
- 
-
                     </div>
+
+                    <div class="step">
+                        <div class="step-number">2</div>
+                        <div class="step-content">
+                            <h4>Clarity on What’s Really Going On</h4>
+                            <p>Most people don't realize what's beneath their sadness, fatigue, or numbness. Kenny
+                                helps you identify the real root — not just treat the symptoms.</p>
+                        </div>
+                    </div>
+
+                    <div class="step">
+                        <div class="step-number">3</div>
+                        <div class="step-content">
+                            <h4>Personalized Path Forward</h4>
+                            <p>No cookie-cutter advice here. Based on your unique situation, Kenny outlines clear
+                                next steps so you know exactly what healing can look like — for you.</p>
+                        </div>
+                    </div>
+
+
+                    <div class="step">
+                        <div class="step-number">4</div>
+                        <div class="step-content">
+                            <h4>Leave With Hope (Maybe for the First Time in a While)</h4>
+                            <p>Even a single conversation can help you feel lighter, more seen, and less alone — and
+                                that spark can change everything.</p>
+                        </div>
+                    </div>
+
+
+
+
+                    <div class="cta-box desktop-hide">
+                        <h3>Kenny Weiss: Truth & Healing Advocate</h3>
+                        <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
+                            from the past so they can once again love themselves. </p>
+                        <div class="button-row">
+                            <a class="button" routerLink="/book-session">Let’s talk</a>
+                        </div>
+                        <div class="step"><small>All queries are replied within
+                                <u>24hrs</u>.</small></div>
+                    </div>
+
+
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
 
     <section class="self-development" style="background-image: url(./images/8.jpeg);">
@@ -548,12 +562,12 @@
         <div class="container">
             <div class="flex-row">
                 <h5 class="tag-line">Our Blog</h5>
-                <h3>Latest from the Blog</h3> 
+                <h3>Latest from the Blog</h3>
             </div>
 
-            <div class="blog-grid"> 
+            <div class="blog-grid">
                 <!-- <div class="blog-post" *ngFor="let post of posts"> -->
-                    <div class="blog-post" *ngFor="let post of posts | slice:0:2">
+                <div class="blog-post" *ngFor="let post of posts | slice:0:2">
                     <div class="blog-img shine-effect">
                         <a [routerLink]="['/post', post.id]">
                             <!-- Agar featured image ho -->
@@ -566,8 +580,10 @@
                             <span><i class="fa-solid fa-user"></i> By: <b
                                     [innerHTML]="post._embedded?.author[0]?.name"></b></span>
                             <span><i class="fa-solid fa-book-open-reader"></i>Motivation</span>
-                        </div> 
-                       <a routerLink="/best-day-blog"><h3>{{ post.title?.rendered }}</h3> </a>
+                        </div>
+                        <a routerLink="/best-day-blog">
+                            <h3>{{ post.title?.rendered }}</h3>
+                        </a>
                         <div [innerHTML]="getShortContent(post.excerpt?.rendered || post.content?.rendered, 15) "></div>
                         <a class="post-link" routerLink="/best-day-blog">View more <i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -581,13 +597,12 @@
     <section class="podcast-section">
         <div class="left-bg"></div>
         <div class="right-bg"></div>
-
-
         <div class="container">
+            <h5 class="tag-line">What we have</h5>
+           <h3>Heal The Hurt Podcast</h3>
             <div class="podcast-row">
                 <div class="podcast-left">
-                    <h5 class="tag-line">What we have</h5>
-                    <h3>Heal The Hurt Podcast</h3>
+                    
                     <ul>
                         <li>
                             <p>Proven strategies for emotional regulation and self-love
@@ -649,7 +664,7 @@
 
                         <div class="audio-player">
                             <button (click)="toggleAudio(1)">
-                              <img class="icon" [src]="
+                                <img class="icon" [src]="
       audios[1].isPlaying
         ? 'https://m.media-amazon.com/images/G/01/Audible/Homestead/samplePlayer/Pause._CB655354636_.svg'
         : 'https://m.media-amazon.com/images/G/01/Audible/Homestead/samplePlayer/Play._CB655354636_.svg'
@@ -697,14 +712,14 @@
                             Now at Barnes &amp; Noble</a>
                     </div>
 
-                     <button class="audibleBtn audible-button" (click)="toggleAudio(0)">
-                            <img class="icon" [src]="
+                    <button class="audibleBtn audible-button" (click)="toggleAudio(0)">
+                        <img class="icon" [src]="
       audios[0].isPlaying
         ? 'https://m.media-amazon.com/images/G/01/Audible/Homestead/samplePlayer/Pause._CB655354636_.svg'
         : 'https://m.media-amazon.com/images/G/01/Audible/Homestead/samplePlayer/Play._CB655354636_.svg'
     " alt="Play/Pause" />
-                            <span>Audible sample</span>
-                        </button>
+                        <span>Audible sample</span>
+                    </button>
 
 
                     <div class="feature">
@@ -725,14 +740,14 @@
                             at Barnes &amp; Noble</a>
                     </div>
 
-                      <button class="audibleBtn audible-button" (click)="toggleAudio(1)">
-                            <img class="icon" [src]="
+                    <button class="audibleBtn audible-button" (click)="toggleAudio(1)">
+                        <img class="icon" [src]="
       audios[1].isPlaying
         ? 'https://m.media-amazon.com/images/G/01/Audible/Homestead/samplePlayer/Pause._CB655354636_.svg'
         : 'https://m.media-amazon.com/images/G/01/Audible/Homestead/samplePlayer/Play._CB655354636_.svg'
     " alt="Play/Pause" />
-                            <span>Audible sample</span>
-                        </button>
+                        <span>Audible sample</span>
+                    </button>
 
                 </div>
             </div>
