--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -67,7 +67,7 @@
                     </div>
                 </div>
 
-                <div class="contacts-box">
+                <!-- <div class="contacts-box">
                     <div class="iconcontact">
                        <i class="fa-solid fa-clock"></i>
                     </div>
@@ -75,14 +75,14 @@
                         <h4>Time</h4>
                         <p>Mon. - Thursday - 7AM - 5 PM</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="contacts-box">
                     <div class="iconcontact">
                         <i class="fa-solid fa-location-dot"></i>
                     </div>
                     <div class="contact-content">
                         <h4>Schedule</h4>
-                        <p>Sunday-Fri: 9 AM – 6 PM</p>
+                        <p>Mon. - Thursday - 7AM - 5 PM</p>
                     </div>
                 </div>
 
