--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -50,7 +50,10 @@ h4 {
     font-size: 1.2em;
     font-weight: 700;
 }
-
+.wordsendsicyel .form h4 {
+    font-size: 1.7em;
+    margin-bottom: 18px;
+}
 .contacts-box i {
     font-size: 23px;
 }
@@ -3116,7 +3119,7 @@ iframe {
     display: grid;
     align-items: center;
     justify-content: space-between;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
     margin-bottom: 60px;
     margin-top: 60px;
@@ -7723,9 +7726,7 @@ a.button.border-only {
         justify-content: space-between;
     }
 
-    .industry-grid {
-        gap: 10px;
-    }
+   
 
     .industry-card .button-row.left {
         display: none;
@@ -7810,7 +7811,6 @@ a.button.border-only {
         gap: 0
     }
 
-    
     ul.doterd li {
         margin-bottom: 0;
     }
@@ -7818,9 +7818,6 @@ a.button.border-only {
     ul.features {
         margin-top: 0px;
     }
-
-
-
 
     section.self-development {
         min-height: auto;
@@ -7831,7 +7828,7 @@ a.button.border-only {
     }
 
     .industry-grid {
-        gap: 30px;
+        gap: 15px;
     }
 
     h4.wp-block-heading,
@@ -7852,7 +7849,9 @@ a.button.border-only {
         display: none;
     }
 
-     
+    .card-body .stars,a.detail2 {
+        font-size: 1em;
+    }
 
     p,
     .read-more-btn,
@@ -7864,7 +7863,7 @@ a.button.border-only {
     .testimonial-role,
     .boxlist-content p,
     .description {
-        font-size: 1.5em;
+        font-size: 1.4em;
         margin: 10px 0px;
         line-height: 1.5;
     }
@@ -7905,107 +7904,153 @@ a.button.border-only {
     .caption {
         font-size: 1.1em;
     }
-.card-body h4 {
-    font-size: 1.8em; 
-}
-.price-row .price { 
-    font-size: 20px;
-    margin-bottom: 20px;
-}
-.pricing-set h4 { 
-    font-size: 1.7em;
-}
-.formleffieldds {
-    padding: 40px 20px 40px 20px; 
-}
-.blogdetailspage .main-content h3, .blogdetailspage .main-content h4, .blogdetailspage .main-content h5, .blogdetailspage .main-content h6 {
-    
-    font-size: 24px;
+
+    .card-body h4 {
+        font-size: 1.8em;
+    }
+
+    .price-row .price {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .pricing-set h4 {
+        font-size: 1.7em;
+    }
+
+    .formleffieldds {
+        padding: 40px 20px 40px 20px;
+    }
+
+    .blogdetailspage .main-content h3,
+    .blogdetailspage .main-content h4,
+    .blogdetailspage .main-content h5,
+    .blogdetailspage .main-content h6 {
+
+        font-size: 24px;
+    }
+
+    .wordsendsicyel .form {
+        padding: 20px 20px;
+    }
+ 
+
+.video-box-row ul li p,.answer {
+    width: 100%; 
 }
 
-.wordsendsicyel .form {
-    padding: 20px 20px; 
+.video-sec { 
+    border-radius: 10px; 
 }
+
+
+
+
+
+
+
+
+
+
 }
 
 @media (max-width: 500px) {
-        .card-content-grey-bg {
+    .card-content-grey-bg {
         padding: 20px 20px 20px 20px;
     }
-    .bookcardbody .author { 
-    flex-wrap: wrap;
-}
-.main-content ol li {
-    margin-bottom: 20px;
-    font-size: 1.4em;
-    line-height: 1.5;
-}
-.kanneylessloren ul li::after, ul.doterd li::after { 
-    top: 12px; 
-}
-    .post-meta .buttonsser a { 
-    font-size: 1em; 
-}
 
-.flex-online-coures h4 { 
-    font-size: 1.5em;
-}
-
-.benefits-list li { 
-    font-size: 17px;
-    line-height: 1.5;
-}
-.industry-grid h4 {
-    font-size: 1.5em;
-}
-.industry-card { 
-    font-size: 14px;
+    .bookcardbody .author {
+        flex-wrap: wrap;
     }
+
+    .main-content ol li {
+        margin-bottom: 20px;
+        font-size: 1.4em;
+        line-height: 1.5;
+    }
+
+    .kanneylessloren ul li::after,
+    ul.doterd li::after {
+        top: 12px;
+    }
+
+    .post-meta .buttonsser a {
+        font-size: 1em;
+    }
+
+    .flex-online-coures h4 {
+        font-size: 1.5em;
+    }
+
+    .benefits-list li {
+        font-size: 17px;
+        line-height: 1.5;
+    }
+
+    .industry-grid h4 {
+        font-size: 1.5em;
+    }
+
+    .industry-card {
+        font-size: 14px;
+    }
+
     .formcontainer .flexingform {
-    width: 100%;
-}
-button.button.submit-btn { 
-    margin: 0 auto;
-}
-.podcast-left ul li::before {
-    top: 12px;
-    position: relative;
-}
+        width: 100%;
+    }
+
+    
+
+    .podcast-left ul li::before {
+        top: 12px;
+        position: relative;
+    }
+
     .grid-3-7 {
         padding: 30px 0;
     }
+
     .icon-item span.icon {
-    width: 125px;
-}
-.featurerd { 
-    font-size: 1.5em; 
-}
-.icon-item span { 
-    font-size: 23px;
-}
-.images .img2 {
+        width: 125px;
+    }
+
+    .featurerd {
+        font-size: 1.5em;
+    }
+
+    .icon-item span {
+        font-size: 23px;
+    }
+
+    .images .img2 {
         width: 92px;
     }
+
     .audible-button {
         max-width: 100%;
         width: 100%;
     }
-.right-content button.audibleBtn {
-    margin-left: 0;
-}
+
+    .right-content button.audibleBtn {
+        margin-left: 0;
+    }
 
     section.who-we-are {
         padding: 30px 0px;
     }
-.right-content .button-row {
+
+    .right-content .button-row {
         padding-left: 0;
     }
+
     .card-img a img {
-    min-height: auto;
-}
-.card-img a {
-    min-height: auto; 
-}
+        min-height: auto;
+    }
+
+    .card-img a {
+        min-height: auto;
+    }
+
     .flexbuttoons {
         gap: 20px 0px;
         flex-wrap: wrap;
@@ -8182,10 +8227,11 @@ button.button.submit-btn {
         margin-top: 10px;
     }
 
-.audible-button {
-    font-size: 18px; 
-}
-    .who-we-are a.button { 
+    .audible-button {
+        font-size: 18px;
+    }
+
+    .who-we-are a.button {
         max-width: 100%;
     }
 
