--- a/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
+++ b/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
@@ -20,13 +20,13 @@
  
         <div class="section-wrapper">
             <div class="container">
-                <div class="flex-inwrapper">
+                <div class="flex-inwrapper notorder">
                     <div class="content" data-aos="fade-up" data-aos-duration="100">
                         <h3>The Replay: Cycle of Shame</h3>
 
                         <p class="desc">The overwhelming emotional experience of childhood injury, loss of inherent
                             power, and adoption of a false persona create a fear-based traumatic emotional chemical
-                            addiction in the brain and body of each child.</p><br>
+                            addiction in the brain and body of each child.</p>
 
                         <p class="desc">This emotional addiction becomes a mostly subconscious shame-based compulsion to
                             replay the unhealed childhood injuries resulting in each adult relationship/s, career/s, and
